// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFormControlLayoutCustomIcon is rendered as button 1`] = `
<button
  class="euiFormControlLayoutCustomIcon customClass euiFormControlLayoutCustomIcon--clickable"
  data-test-subj="customIcon"
  type="button"
>
  <span
    aria-hidden="true"
    class="euiFormControlLayoutCustomIcon__icon"
    data-euiicon-type="alert"
  />
</button>
`;

exports[`EuiFormControlLayoutCustomIcon is rendered as span 1`] = `
<span
  class="euiFormControlLayoutCustomIcon customClass"
  data-test-subj="customIcon"
>
  <span
    aria-hidden="true"
    class="euiFormControlLayoutCustomIcon__icon"
    data-euiicon-type="alert"
  />
</span>
`;
